fix: activivity graph sometimes overflowing the container
closes #7157
closes #5942

--- a/frontend/src/styles/media-queries-blue.scss
+++ b/frontend/src/styles/media-queries-blue.scss
@@ -237,7 +237,7 @@
     }
   }
   .testActivity {
-    --box-size: 0.58em;
+    --font-size: 0.6em;
     // .activity div,
     // .legend div {
     //   width: 0.7em;
