--- a/frontend/src/styles/media-queries-green.scss
+++ b/frontend/src/styles/media-queries-green.scss
@@ -251,7 +251,8 @@
     }
   }
   .testActivity {
-    --box-size: 0.7em;
+    --gap-size: 0.1em;
+    --font-size: 0.8em;
     .wrapper {
       grid-template-areas:
         "top top"
